--- a/packages/end-user/src/css/components/_card.scss
+++ b/packages/end-user/src/css/components/_card.scss
@@ -13,6 +13,7 @@ $card-mobile-padding: $spacing-xx;
     max-width: $card-width;
     min-height: 440px;
     padding: $card-padding-top $card-padding-horizontal $card-padding-bottom $card-padding-horizontal;
+    position: relative;
     width: 100%;
 }
 
