Linting fized and removed error icon from primary errored text input

--- a/packages/end-user/src/css/components/_text-input.scss
+++ b/packages/end-user/src/css/components/_text-input.scss
@@ -33,5 +33,10 @@
 
         padding: $spacing-xs + 1px $spacing-sm $spacing-xs - 2px $spacing-sm;
         text-align: center;
+
+        &.text-input--error {
+            padding-right: $spacing-sm;
+            background-image: none;
+        }
     }
 }
