UIP-1465 fixed highlighting
Change-Id: I68095fa91324b7f17c289f5e9f33f146e0d78d62

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -848,6 +848,8 @@ input[type=file] {
             &.highlighted {
                 background-color: $color-active-blue;
                 color: $color-white;
+                display: inline-block;
+                min-width: 100%;
 
                 &:before {
                     background-color: $color-white;
@@ -908,6 +910,7 @@ input[type=file] {
             display: block;
 
             @include animation(fade-in 0.2s);
+
         }
         .input-container {
             &:last-of-type {
