--- a/packages/ui-library/src/css/colorpicker.scss
+++ b/packages/ui-library/src/css/colorpicker.scss
@@ -2,6 +2,12 @@
     position: relative;
     display: inline-block;
 
+    &.color-picker-error {
+        .color-picker:after {
+            right: 30px;
+        }
+    }
+
     .color-picker {
         position: relative;
         display: inline-block;
@@ -123,3 +129,4 @@
         }
     }
 }
+
