UIP-1502 : add support for 5 rocker buttons in a set - previously 4 UIP-1491 : change default vertical spacing for input from 20px to 25px (already 25px on input-row class)
Change-Id: I65b454d5b19b13dcaa72838352d778155f4a62a6

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -421,41 +421,13 @@ button.ellipsis-loader-button {
             pointer-events: none;
         }
     }
-    &.sel-0 {
-        label {
-            &:nth-of-type(1) {
-                background: $color-timberwolf;
-
-                @include transition($transition);
-            }
-        }
-    }
-    &.sel-1 {
-        label {
-            &:nth-of-type(2) {
-                background: $color-timberwolf;
-
-                @include transition($transition);
-            }
-        }
-    }
-    &.sel-2 {
-        label {
-            &:nth-of-type(3) {
-                background: $color-timberwolf;
-
-                @include transition($transition);
-            }
-        }
-    }
-    &.sel-3 {
-        label {
-            &:nth-of-type(4) {
-                background: $color-timberwolf;
-
-                @include transition($transition);
-            }
-        }
+    &.sel-0 label:nth-of-type(1),
+    &.sel-1 label:nth-of-type(2),
+    &.sel-2 label:nth-of-type(3),
+    &.sel-3 label:nth-of-type(4),
+    &.sel-4 label:nth-of-type(5) {
+        @include transition($transition);
+        background: $color-timberwolf;
     }
 }
 
