--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -1,3 +1,6 @@
+// INCLUDE PARTIALS ----------------------------------------------------------------------------------------------------
+
+@import 'code-view';
 
 // INPUT GLOBAL VARS ---------------------------------------------------------------------------------------------------
 
