UIP-1504 moved items out of css tips and tricks and put them on left nav
Change-Id: I4af49960d0b448031b31372e75a8f87663cd7460

--- a/packages/ui-library/src/css/result-sets.scss
+++ b/packages/ui-library/src/css/result-sets.scss
@@ -30,7 +30,7 @@ $expandable-row-gap: 12px;
     $button-bottom: 6px;
 
     position: relative;
-    margin: 20px 0 0 0;
+    margin: 20px 0 0;
 
     .item {
         position: relative;
