Added link property to Help Hint component, added target property to Link component- UIP-1493
Change-Id: I0647f8ef5ef314b5540af0b8b27452dbff1163ec

--- a/packages/ui-library/src/css/help.scss
+++ b/packages/ui-library/src/css/help.scss
@@ -49,6 +49,33 @@
         &.type-dark {
             @include bg-styles($color-midnight);
         }
+        &.tooltip-text-link {
+            &:hover {
+                visibility: visible;
+                @include opacity(1);
+            }
+            a {
+                text-decoration: none;
+            }
+            a:hover {
+                text-decoration: underline;
+            }
+        }
+        .content-link {
+            font-weight: bold;
+            &::before {
+                content: "";
+                height: 1px;
+                background-color: $color-white;
+                display: inline-block;
+                margin: 10px 0 8px;
+                position: relative;
+                width: 100%;
+            }
+            .icon-info {
+                color: $color-white;
+            }
+        }
         a {
             color: $color-white;
             text-decoration: underline;
