UIP-1510 changed all buttons when applicable and didnt break
Change-Id: Id8a2b0407b2c5ac4b5c2a3d66d82cb9e5696ad07

--- a/packages/ui-library/src/css/help.scss
+++ b/packages/ui-library/src/css/help.scss
@@ -52,6 +52,7 @@
         &.tooltip-text-link {
             &:hover {
                 visibility: visible;
+
                 @include opacity(1);
             }
             a {
@@ -63,8 +64,8 @@
         }
         .content-link {
             font-weight: bold;
-            &::before {
-                content: "";
+            &:before {
+                content: '';
                 height: 1px;
                 background-color: $color-white;
                 display: inline-block;
