CD-499 : accomodate text/hr styles required for User Roles
Change-Id: I526ca09e41e084d4389fc102676605ed1be8e1ad

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -1143,7 +1143,11 @@ $color-grey-minor-1: $color-neutral-30;
 }
 
 .hr--sm {
-    margin: 10px 0;
+    margin: $spacing-sm 0;
+}
+
+.hr--md {
+    margin: $spacing-md 0;
 }
 
 // flakey but one of only a few options : use with caution
