UIP-1528 merged with UIP-1164 created label/value component added content indentation
Change-Id: Iaf6f20a5af13fa29d851002375ebfd24e21047af

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -5,6 +5,7 @@
 @import 'layout/stack';
 @import 'layout/header-bar';
 @import 'layout/view-toggle';
+@import 'layout/label-value-pairs';
 
 $layout-header-height: 46px;
 $layout-nav-width: 190px;
