UIP-1514: Added search to UI Library demo site
Change-Id: I52523efddd05331c4033c877b61c60baa76d5282

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -1,6 +1,7 @@
 // INCLUDE PARTIALS ----------------------------------------------------------------------------------------------------
 
 @import 'code-view';
+@import 'forms/_keyword-search';
 
 // INPUT GLOBAL VARS ---------------------------------------------------------------------------------------------------
 
