UIP-1516 wizard error message with setTimeout
Change-Id: I2a154b99bd8f9ba22fae146a9e145a0768f02c9a

--- a/packages/ui-library/src/css/wizard.scss
+++ b/packages/ui-library/src/css/wizard.scss
@@ -153,7 +153,15 @@ $wizard-close-button-color: $color-strong-neutral-40;
     bottom: 0;
     top: 0;
     overflow-y: auto;
+
+    .page-messages {
+        position: relative;
+        top: -$wizard-v-spacing;
+        left: -$wizard-h-spacing;
+        width: calc(100% + (#{$wizard-h-spacing} * 2));
+    }
 }
+
 
 .wizard-step__title {
     font-size: $wizard-title-font-size;
