UIP-1531 : tweak file drop label alignment
Change-Id: I8f53db0d4e990e9671e8573ddc9c0f0510e8db0a

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -1309,6 +1309,7 @@ input[type=file] {
     label {
         position: relative;
         display: inline-block;
+        vertical-align: middle;
         top: auto;
         bottom: auto;
         left: auto;
