UIP-1540 : wizard styling tweaks per Chad
Change-Id: Ibe7b6a75e6ef95aa05022010d5c0aa161dbd62e0

--- a/packages/ui-library/src/css/icons.scss
+++ b/packages/ui-library/src/css/icons.scss
@@ -314,6 +314,10 @@ a[class*=' icon-'] {
     content: '\e911';
 }
 
+.icon-non-interactive:before {
+  content: '\e91a';
+}
+
 .icon-notepad:before {
     content: '\e90b';
 }
