--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -6,6 +6,7 @@
 @import 'layout/header-bar';
 @import 'layout/view-toggle';
 @import 'layout/label-value-pairs';
+@import 'templates/_expandable-row-tooltip.scss';
 @import 'templates/_section-columns';
 
 $layout-header-height: 46px;
